[project]
name = "biopb-mcp"
dynamic = ["version"]
description = "Performing image analysis by visiting biopb endpoints"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Ji Yu"},
  {email = "jyu@uchc.edu"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
# Upper bound mirrors biopb / biopb-tensor-server (both >=3.10,<3.13): biopb-mcp
# depends on biopb[tensor], so without it a 3.13 install fails with a confusing
# transitive resolution error instead of a clean requires-python message. Also
# matches the classifiers above (3.10-3.12 only).
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "magicgui",
    "qtpy",
    "scikit-image",
    # 0.6.3: query_sources(format=...) for pandas/arrow results (agent guidance
    # in guide://tensor, issue #27); also carries the 0.5.8 localhost cache
    # disable + configure_cache/worker-init cache plugin (data-plane chunk-cache
    # budget used by mcp/_bootstrap._register_cache_plugin).
    "biopb[tensor] >= 0.6.4",
    "opencv-python-headless",
    # grpcio (runtime) comes via biopb[tensor]; grpcio-health-checking pulls it
    # too and provides grpc_health.v1 used in image_processing/_grpc.py. We do
    # NOT depend on grpcio-tools: it is a build-time codegen plugin, is never
    # imported at runtime, and being unpinned it drags resolvers down to an
    # ancient, unbuildable grpcio-tools when co-installed with biopb.
    "grpcio-health-checking",
]

[project.optional-dependencies]
tables = [
    "napari-skimage-regionprops",  # For annotation table display
]
# The MCP server is a standalone process (not a plugin loaded inside a running
# napari) that constructs its own napari.Viewer() in the kernel bootstrap, so it
# must bring napari and a real Qt binding itself — qtpy in the core deps is only
# a shim. napari>=0.7 keeps the resolver off the older napari 0.6.x line, which
# pins vispy<0.16 and fails to init a GL canvas under Qt 6.11.
mcp = ["mcp>=1.20", "uvicorn>=0.29", "jupyter_client", "ipykernel", "psutil", "distributed", "napari>=0.7", "pyqt6"]
3d = ["vedo"] # 3d rendering from mesh

# Test/dev dependencies live in a PEP 735 dependency *group* rather than a
# `testing` extra so they stay out of biopb-mcp's published metadata (groups are
# never part of a distributed package's Requires-Dist). The groups pull
# biopb-tensor-server, which is NOT on PyPI; they resolve it from the in-tree
# workspace member (root [tool.uv.workspace] / [tool.uv.sources]), so install
# with uv (CI uses uv too — tox/pip are not workspace-aware):
#   uv sync --package biopb-mcp --extra mcp --group testing
# A plain `pip install biopb-mcp[...]` can never pull the tensor server (not on
# PyPI); that would require publishing biopb-tensor-server and exposing it as a
# normal extra.
[dependency-groups]
# Runnable full stack, no test tooling: the MCP server deps plus the local
# tensor server, giving a checkout a real `biopb server start` / autostart
# target without pytest.
#
# Since the monorepo merge these are plain names, NOT pinned release wheels:
# the root pyproject's [tool.uv.workspace] + [tool.uv.sources] resolve `biopb`
# and `biopb-tensor-server` to the sibling workspace members (editable), so the
# whole stack is always built from this same checkout and version-pairing is
# automatic — no URL/SHA to bump and re-`uv lock` on every server release.
# `[web]` pulls fastapi/uvicorn/pillow/simplejpeg — the server's CLI
# (`biopb server start`) imports its HTTP server at module load, so without it
# even importing the CLI raises ModuleNotFoundError: fastapi.
integration = [
    "biopb-mcp[mcp]",  # MCP server deps (napari>=0.7, pyqt6, jupyter_client, …)
    "biopb[tensor]",
    "biopb-tensor-server[web]",
]
# Full stack + test tooling. = integration plus pytest. (napari/pyqt6 come in
# via biopb-mcp[mcp] in the integration group.)
testing = [
    {include-group = "integration"},
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "pytest-env",  # https://github.com/qwertyquerty/pytest-env
]

[project.scripts]
biopb-mcp = "biopb_mcp.mcp.__main__:main"

[project.entry-points."napari.manifest"]
biopb-mcp = "biopb_mcp:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/biopb/biopb/issues"
"Documentation" = "https://github.com/biopb/biopb/tree/main/biopb-mcp#readme"
"Source Code" = "https://github.com/biopb/biopb/tree/main/biopb-mcp"
"User Support" = "https://github.com/biopb/biopb/issues"

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

# Versioned off the shared monorepo git history. Like biopb-tensor-server, this
# package lives in a subdir (root = "..") and is keyed to its OWN tag prefix so
# its version never picks up the client's `v*` or the server's `server-v*` tags.
# The matched `git describe` is mandatory here: without --match, describe would
# return the most recent tag of ANY prefix and mis-version the wheel.
#
# The version group captures everything after `mcp-v` and lets packaging/PEP 440
# validate it, so prerelease tags work too: mcp-v0.7.1, mcp-v0.7.1a1 (alpha),
# mcp-v0.7.1rc1, … — handy for test releases (PyPI accepts prereleases and
# `pip install` ignores them by default). A non-PEP-440 suffix (e.g. -test)
# still fails, by design.
[tool.setuptools_scm]
version_file = "src/biopb_mcp/_version.py"
root = ".."
tag_regex = "^mcp-v(?P<version>.+)$"

[tool.setuptools_scm.scm.git]
describe_command = "git describe --tags --match 'mcp-v*'"

[tool.pytest.ini_options]
qt_api = "pyqt6"
addopts = "--ignore-glob='*_vendor*'"

[tool.pytest_env]
QT_QPA_PLATFORM = "offscreen"

[tool.black]
line-length = 79
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long. let black handle this
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
    "SIM117", # flake8-simplify - some merged with statements don't look great with black; revisit later
    "BLE001", # blind-except - intentional best-effort cleanup paths (e.g. _kernel.py, _config.py, connect/autostart) that must never propagate.
    "UP035", # deprecated-import - keep typing.List/Dict for magicgui runtime annotations, consistent with the UP006/UP007 ignores.
    "G004", # logging-f-string - stylistic; the codebase mixes f-string and lazy %-style logs.
    "SIM105", # suppressible-exception - keep explicit try/except/pass over contextlib.suppress in death-pipe / cleanup paths.
    "B904", # raise-without-from-inside-except - one deliberate re-raise in image_processing/_grpc.py.
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py310"
fix = true
