[project]
name = "biopb-mcp"
dynamic = ["version"]
description = "Performing image analysis by visiting biopb endpoints"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Ji Yu"},
  {email = "jyu@uchc.edu"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
# Upper bound mirrors biopb / biopb-tensor-server (both >=3.10,<3.13): biopb-mcp
# depends on biopb[tensor], so without it a 3.13 install fails with a confusing
# transitive resolution error instead of a clean requires-python message. Also
# matches the classifiers above (3.10-3.12 only).
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "magicgui",
    "qtpy",
    "scikit-image",
    # scipy: arrives transitively via scikit-image, but the built-in rolling-ball
    # kernel plugin (biopb_mcp/plugins/) hard-imports scipy.ndimage, so make the
    # requirement explicit.
    "scipy",
    # 0.6.3: query_sources(format=...) for pandas/arrow results (agent guidance
    # in guide://tensor, issue #27); also carries the 0.5.8 localhost cache
    # disable + configure_cache/worker-init cache plugin (data-plane chunk-cache
    # budget used by mcp/_bootstrap._register_cache_plugin).
    "biopb[tensor] >= 0.6.4",
    # ome-zarr-py: backs the napari OME-Zarr writers (biopb_mcp._writers, the
    # `contributions.writers` in napari.yaml). Already arrives transitively via
    # biopb[tensor], but the writers hard-import it, so a direct dep makes the
    # requirement explicit.
    "ome-zarr >= 0.6.1",
    "opencv-python-headless",
    # grpcio (runtime) comes via biopb[tensor]; grpcio-health-checking pulls it
    # too and provides grpc_health.v1 used in image_processing/_grpc.py. We do
    # NOT depend on grpcio-tools: it is a build-time codegen plugin, is never
    # imported at runtime, and being unpinned it drags resolvers down to an
    # ancient, unbuildable grpcio-tools when co-installed with biopb.
    "grpcio-health-checking",
]

[project.optional-dependencies]
tables = [
    "napari-skimage-regionprops",  # For annotation table display
]
# The MCP server is a standalone process (not a plugin loaded inside a running
# napari) that constructs its own napari.Viewer() in the kernel bootstrap, so it
# must bring napari and a real Qt binding itself — qtpy in the core deps is only
# a shim. napari is pinned EXACTLY (not a floor) and is the single source of
# truth for the version: dev/CI (`uv sync ... --extra mcp`), the published wheel,
# and the installer all resolve the identical napari, so the graph-walk
# thread-safety test certifies the same object graph that actually ships (see
# _jobs.wrap_viewer_for_threads). `[all]` brings PyQt6 in modern napari — its
# default Qt binding is version-dependent, so the exact pin freezes that too
# (>=0.7 was also needed to stay off the 0.6.x line, which pins vispy<0.16 and
# can't init a GL canvas under Qt 6.11). The release pipeline surfaces this
# version as a `versions.json` release attribute that install.sh reads to pin
# `napari[all]==` at deploy time (release.yaml + install/install.sh). Bump here.
# distributed floor: the session child owns the LocalCluster (DaskClusterHost),
# so its worker processes live in the *session child's* process group, not the
# kernel's. On an abnormal session-child death (SIGKILL/OOM) neither _shutdown nor
# the atexit close runs to reap them — the sole remaining cleanup is dask's own
# "worker shuts down when it loses the scheduler" behavior, which only holds since
# the `reconnect` era ended (>=2023.9). Pin a floor so orphan-hardening (issue #13)
# can't silently regress on an older distributed. See biopb._lifecycle.deathwatch
# and mcp/_cluster.
mcp = ["mcp>=1.20", "uvicorn>=0.29", "jupyter_client", "ipykernel", "psutil", "distributed>=2023.9.0", "napari[all]==0.7.0", "pyqt6"]
3d = ["vedo"] # 3d rendering from mesh

# Test/dev dependencies live in a PEP 735 dependency *group* rather than a
# `testing` extra so they stay out of biopb-mcp's published metadata (groups are
# never part of a distributed package's Requires-Dist). The groups pull
# biopb-tensor-server, which is NOT on PyPI; they resolve it from the in-tree
# workspace member (root [tool.uv.workspace] / [tool.uv.sources]), so install
# with uv (CI uses uv too — tox/pip are not workspace-aware):
#   uv sync --package biopb-mcp --extra mcp --group testing
# A plain `pip install biopb-mcp[...]` can never pull the tensor server (not on
# PyPI); that would require publishing biopb-tensor-server and exposing it as a
# normal extra.
[dependency-groups]
# Runnable full stack, no test tooling: the MCP server deps plus the local
# tensor server, giving a checkout a real `biopb server start` / autostart
# target without pytest.
#
# Since the monorepo merge these are plain names, NOT pinned release wheels:
# the root pyproject's [tool.uv.workspace] + [tool.uv.sources] resolve `biopb`
# and `biopb-tensor-server` to the sibling workspace members (editable), so the
# whole stack is always built from this same checkout and version-pairing is
# automatic — no URL/SHA to bump and re-`uv lock` on every server release.
# `[web]` pulls fastapi/uvicorn/pillow/simplejpeg — the server's CLI
# (`biopb server start`) imports its HTTP server at module load, so without it
# even importing the CLI raises ModuleNotFoundError: fastapi.
integration = [
    "biopb-mcp[mcp]",  # MCP server deps (napari>=0.7, pyqt6, jupyter_client, …)
    "biopb[tensor]",
    "biopb-tensor-server[web]",
]
# Full stack + test tooling. = integration plus pytest. (napari/pyqt6 come in
# via biopb-mcp[mcp] in the integration group.)
testing = [
    {include-group = "integration"},
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",  # https://pytest-qt.readthedocs.io/en/latest/
    "pytest-env",  # https://github.com/qwertyquerty/pytest-env
]

[project.scripts]
biopb-mcp = "biopb_mcp.mcp.__main__:main"
# Light console entry (stdlib + biopb._config_location only, no kernel/napari
# import) the installer calls to seed the built-in example kernel plugins
# (biopb_mcp/plugins/) into ~/.config/biopb/kernel/ — the #92 "bring your own
# tool" example, delivered as a visible file rather than a buried entry point.
biopb-mcp-seed-plugins = "biopb_mcp.plugins._seed:_cli"

[project.entry-points."napari.manifest"]
biopb-mcp = "biopb_mcp:napari.yaml"

[project.urls]
"Bug Tracker" = "https://github.com/biopb/biopb/issues"
"Documentation" = "https://github.com/biopb/biopb/tree/main/biopb-mcp#readme"
"Source Code" = "https://github.com/biopb/biopb/tree/main/biopb-mcp"
"User Support" = "https://github.com/biopb/biopb/issues"

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
# Bundled skills snapshot (mcp/_skills_bundle/): last-resort offline fallback for
# the curated catalog + bodies (see mcp/_skills.py).
"biopb_mcp.mcp" = ["_skills_bundle/*.json", "_skills_bundle/*.md"]

# Versioned off the shared monorepo git history. Product component: keyed to the
# single product tag `release-v*` (not a per-package prefix), so mcp, the tensor
# server, the control, and the web bundle all share one product version. The
# package lives in a subdir (root = ".."). The matched `git describe` is mandatory
# here: without --match, describe would return the nearest tag of ANY prefix
# (e.g. the SDK's `v*`) and mis-version the wheel.
#
# The version group captures everything after `release-v` and lets packaging/PEP
# 440 validate it, so prerelease tags work too: release-v0.11.0, release-v0.11.0rc1
# (rc), release-v0.11.0a1 (alpha), … A non-PEP-440 suffix (e.g. -test) still fails,
# by design.
[tool.setuptools_scm]
version_file = "src/biopb_mcp/_version.py"
root = ".."
tag_regex = "^release-v(?P<version>.+)$"

[tool.setuptools_scm.scm.git]
describe_command = "git describe --tags --match 'release-v*'"

[tool.pytest.ini_options]
qt_api = "pyqt6"
addopts = "--ignore-glob='*_vendor*'"

[tool.pytest_env]
QT_QPA_PLATFORM = "offscreen"

# Lint/format config lives at the monorepo root [tool.ruff] (issue #82). The
# magicgui-driven ignores (UP006/UP007/UP035 runtime annotations) were promoted
# there and now apply repo-wide.
