[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biopb-tensor-server"
version = "0.1.0"
requires-python = ">=3.8"
authors = [ {name = "Ji Yu", email = "jyu@uchc.edu" } ]
description = "BioPB Tensor Arrow Flight server for multi-dimensional array storage"
readme = "README.md"
license = "MIT"
dependencies = [
  "biopb",
  "pyarrow >= 14.0.0",
  "zarr >= 2.0.0",
  "dask[array] >= 2024.0.0",
  "cachey >= 0.1.0",
  "tifffile >= 2021.8.30",
  "numpy < 2.0",
  "typer[all] >= 0.9.0",
  "tomli >= 2.0.0; python_version < '3.11'",
  "watchdog >= 4.0.0",
  "duckdb",
]

[project.optional-dependencies]
  web = [
    "fastapi >= 0.111.0",
    "uvicorn[standard] >= 0.30.0",
  ]
  test = [
    "pytest >= 7.0.0",
    "httpx >= 0.25.0",
  ]
  ome-zarr = [
    "ome-zarr >= 0.6.1",
  ]
  aics = [
    "aicsimageio >= 4.0.0",
    "aicspylibczi >= 3.1.1",
    "readlif >= 0.6.4",
    "aicsimageio[nd2]",
    "aicsimageio[dv]",
  ]
  dicom = [
    "pydicom >= 2.4.0",
  ]
  nifti = [
    "nibabel >= 5.0.0",
  ]
  medical = [
    "pydicom >= 2.4.0",
    "nibabel >= 5.0.0",
  ]

[project.scripts]
  biopb-tensor = "biopb_tensor_server.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["biopb_tensor_server*"]

[tool.ruff.lint]
# Enable specific rules for import cleanup
select = [
    "F401", # Unused imports
    "I",    # Import sorting (isort)
]

[tool.ruff.lint.isort]
# Optional: customize isort behavior
combine-as-imports = true
force-single-line = false