[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "biopb-tensor-server"
dynamic = ["version"]
requires-python = ">=3.10,<3.13"
authors = [ {name = "Ji Yu", email = "jyu@uchc.edu" } ]
description = "BioPB Tensor Arrow Flight server for multi-dimensional array storage"
readme = "README.md"
license = "MIT"
dependencies = [
  "biopb",
  "pyarrow >= 14.0.0",
  "zarr >= 2.0.0",
  "dask[array] >= 2024.0.0",
  "cachey >= 0.1.0",  # required by biopb.tensor.client (SDK TensorFlightClient); the SDK only declares it under its [tensor] extra, which we don't pull
  "fsspec",  # remote sources (S3/GCS/HTTP) and zarr FSStore
  "tifffile >= 2021.8.30",
  "numpy < 2.0",
  "typer >= 0.12.0",
  "tomli >= 2.0.0; python_version < '3.11'",
  "duckdb",
]

[project.optional-dependencies]
  web = [
    "fastapi >= 0.111.0",
    "uvicorn[standard] >= 0.30.0",
    "pillow >= 9.0.0",
    "simplejpeg >= 1.6.0",
  ]
  test = [
    "pytest >= 7.0.0",
    "pytest-timeout >= 2.1.0",
    "httpx >= 0.25.0",
    # The test suite imports the web stack at collection time (cli_test.py pulls
    # in cli -> http_server -> fastapi; http_server_test.py uses TestClient), so
    # the web extra is required to run `pytest tests/`. Kept as a self-reference
    # so the dependency list stays defined once, in [web].
    "biopb-tensor-server[web]",
  ]
  aics = [
    "aicsimageio >= 4.0.0",
    "aicspylibczi >= 3.1.1",
    "readlif >= 0.6.4",
    "aicsimageio[nd2]",
    "aicsimageio[dv]",
  ]
  ndtiff = [
    "ndtiff >= 3.0.0",
  ]
  hdf5 = [
    "h5py >= 3.0.0",
  ]
  # Deprecated, kept for backward compatibility: OmeZarrAdapter reads multiscales
  # via the core `zarr` dependency (no `ome-zarr` package needed). Empty so that
  # pinned installs of `biopb-tensor-server[ome-zarr]` still resolve.
  ome-zarr = []
  # Java Bio-Formats fallback for legacy/proprietary formats with no pure-Python
  # reader (ZVI, ...). A JDK is NOT a build/system dependency: scyjava + cjdk
  # download a small, user-cached JDK on first read.
  bioformats = [
    "bioformats_jar",
    "scyjava >= 1.9.0",
    "cjdk >= 0.5.0",
  ]
  dicom = [
    "pydicom >= 2.4.0",
  ]
  nifti = [
    "nibabel >= 5.0.0",
  ]
  medical = [
    "pydicom >= 2.4.0",
    "nibabel >= 5.0.0",
  ]

[project.scripts]
  biopb-tensor-server = "biopb_tensor_server.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["biopb_tensor_server*"]

# Version derived from git tags (server-vX.Y.Z format)
[tool.setuptools_scm]
version_file = "biopb_tensor_server/_version.py"
root = ".."
tag_regex = "^server-v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.setuptools_scm.scm.git]
describe_command = "git describe --tags --match 'server-v*'"

[tool.ruff.lint]
# Enable specific rules for import cleanup
select = [
    "F401", # Unused imports
    "I",    # Import sorting (isort)
]

[tool.ruff.lint.isort]
# Optional: customize isort behavior
combine-as-imports = true
force-single-line = false

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require external services or network access",
]